[B] Fix vertical alignment of list filter icon
Resolves #2182

--- a/client/src/theme/styles/components/backend/list/entity/_entity-list-search.scss
+++ b/client/src/theme/styles/components/backend/list/entity/_entity-list-search.scss
@@ -156,12 +156,13 @@
 
     svg {
       position: absolute;
-      top: 8px;
+      top: 50%;
       right: 8px;
       width: 22px;
       height: 22px;
       color: $neutral50;
       pointer-events: none;
+      transform: translateY(-50%);
     }
 
   }
